# aghack2018

./: default.nix
frontend/: frontend.cabal
frontend/src/: Api.hs  Frontend.hs
static/: customVis.js  extra.css
