name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , semantic-reflex
               , lens
               , containers
               , jsaddle
               , bytestring
               , servant
               , servant-reflex
               , aeson
  exposed-modules:
    Frontend, Api
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src
  build-depends: base
               , common
               , reflex-dom
               , static
               , text
               , frontend
               , semantic-reflex
               , lens
               , containers
               , jsaddle
               , bytestring
               , servant
               , servant-reflex
               , aeson
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
